--- a/lectures/_toc.yml
+++ b/lectures/_toc.yml
@@ -9,7 +9,7 @@ parts:
   numbered: true
   chapters:
   - file: long_run_growth
-  - file: business_cycle
+  - file: business_cycle_cn
   - file: inflation_history
   - file: inequality
 - caption: Essential Tools
@@ -47,7 +47,7 @@ parts:
 - caption: Stochastic Dynamics
   numbered: true
   chapters:
-  - file: ar1_processes
+  - file: ar1_processes_cn
   - file: markov_chains_I
   - file: markov_chains_II
   - file: time_series_with_matrices
