add all infrastructure for lecture build

--- a/lectures/_config.yml
+++ b/lectures/_config.yml
@@ -105,8 +105,8 @@ sphinx:
       index_toc.md: intro.md
     tojupyter_static_file_path: ["_static"]
     tojupyter_target_html: true
-    tojupyter_urlpath: "https://intro.quantecon.org/"
-    tojupyter_image_urlpath: "https://intro.quantecon.org/_static/"
+    tojupyter_urlpath: "https://intro.quantecon.org/"  #TODO: update
+    tojupyter_image_urlpath: "https://intro.quantecon.org/_static/" #TODO: update
     tojupyter_lang_synonyms: ["ipython", "ipython3", "python"]
     tojupyter_kernels:
       python3:
