--- a/lectures/_toc.yml
+++ b/lectures/_toc.yml
@@ -5,3 +5,13 @@ parts:
   numbered: true
   chapters:
   - file: long_run_growth
+- caption: Support Lectures for Linking
+  numbered: true
+  chapters:
+  - file: business_cycle
+- caption: Other
+  numbered: true
+  chapters:
+  - file: troubleshooting
+  - file: zreferences
+  - file: status
