--- a/lectures/_toc.yml
+++ b/lectures/_toc.yml
@@ -1,14 +1,90 @@
 format: jb-book
 root: intro
 parts:
-- caption: 经济数据
+- caption: Introduction
+  numbered: true
+  chapters:
+  - file: about
+- caption: Economic Data 
   numbered: true
   chapters:
   - file: long_run_growth
-- caption: Support Lectures for Linking
+  - file: business_cycle
+  - file: inflation_history
+  - file: french_rev 
+  - file: inequality
+- caption: Foundations
   numbered: true
   chapters:
-  - file: business_cycle
+  - file: intro_supply_demand
+  - file: linear_equations
+  - file: complex_and_trig
+  - file: geom_series
+- caption: "Linear Dynamics: Finite Horizons"
+  numbered: true
+  chapters:
+  - file: pv
+  - file: cons_smooth
+  - file: equalizing_difference
+  - file: cagan_ree
+  - file: cagan_adaptive
+- caption: "Linear Dynamics: Infinite Horizons"
+  numbered: true
+  chapters:
+  - file: eigen_I
+  - file: greek_square 
+- caption: Probability and Distributions
+  numbered: true
+  chapters:
+  - file: prob_dist
+  - file: lln_clt
+  - file: monte_carlo
+  - file: heavy_tails
+  - file: schelling
+- caption: Nonlinear Dynamics
+  numbered: true
+  chapters:
+  - file: scalar_dynam
+  - file: solow
+  - file: cobweb
+  - file: olg
+  - file: commod_price
+- caption: Monetary-Fiscal Policy Interactions
+  numbered: true
+  chapters:
+  - file: money_inflation
+  - file: unpleasant
+  - file: money_inflation_nonlinear
+  - file: laffer_adaptive
+- caption: Stochastic Dynamics
+  numbered: true
+  chapters:
+  - file: ar1_processes
+  - file: markov_chains_I
+  - file: markov_chains_II
+  - file: time_series_with_matrices
+- caption: Optimization
+  numbered: true
+  chapters:
+  - file: lp_intro
+  - file: short_path
+- caption: Modeling in Higher Dimensions
+  numbered: true
+  chapters:
+  - file: eigen_II
+  - file: input_output
+  - file: lake_model
+  - file: networks
+- caption: Markets and Competitive Equilibrium
+  numbered: true
+  chapters:
+  - file: supply_demand_multiple_goods
+  - file: supply_demand_heterogeneity
+- caption: Estimation
+  numbered: true
+  chapters:
+  - file: simple_linear_regression
+  - file: mle
 - caption: Other
   numbered: true
   chapters:
