--- a/lectures/_config.yml
+++ b/lectures/_config.yml
@@ -35,15 +35,19 @@ latex:
     targetname: quantecon-python-intro.tex
 
 sphinx:
-  extra_extensions: [sphinx_multitoc_numbering, sphinxext.rediraffe, sphinx_exercise, sphinx_togglebutton, sphinx.ext.intersphinx, sphinx_proof, sphinx_tojupyter] 
+  extra_extensions: [sphinx_multitoc_numbering, sphinxext.rediraffe, sphinx_exercise, sphinx_togglebutton, sphinx.ext.intersphinx, sphinx_proof, sphinx_tojupyter, sphinx_reredirects] 
   config:
+    bibtex_reference_style: author_year
     # false-positive links
     linkcheck_ignore: ['https://doi.org/https://doi.org/10.2307/1235116', 'https://math.stackexchange.com/*', 'https://stackoverflow.com/*']
     # myst-nb config
     nb_render_image_options:
       width: 80%
     nb_code_prompt_show: "Show {type}"
+    suppress_warnings: [mystnb.unknown_mime_type, myst.domains]
     # -------------
+    html_js_files:
+      - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js
     html_favicon: _static/lectures-favicon.ico
     html_theme: quantecon_book_theme
     html_static_path: ['_static']
@@ -71,6 +75,9 @@ sphinx:
         colab_url                 : https://colab.research.google.com
         thebe                     : false  # Add a thebe button to pages (requires the repository to run on Binder)
     intersphinx_mapping:
+      intermediate: 
+        - https://python.quantecon.org/
+        - null
       pyprog:
         - https://python-programming.quantecon.org/
         - null
@@ -103,10 +110,13 @@ sphinx:
     mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
     rediraffe_redirects:
       index_toc.md: intro.md
+    # Remote Redirects
+    redirects:
+      ak2:   https://python.quantecon.org/ak2.html
     tojupyter_static_file_path: ["_static"]
     tojupyter_target_html: true
-    tojupyter_urlpath: "https://intro.quantecon.org/"  #TODO: update
-    tojupyter_image_urlpath: "https://intro.quantecon.org/_static/" #TODO: update
+    tojupyter_urlpath: "https://intro.quantecon.org/"
+    tojupyter_image_urlpath: "https://intro.quantecon.org/_static/"
     tojupyter_lang_synonyms: ["ipython", "ipython3", "python"]
     tojupyter_kernels:
       python3:
