update root url

--- a/lectures/_config.yml
+++ b/lectures/_config.yml
@@ -25,7 +25,7 @@ execute:
     - '_static/*'
 
 html:
-  baseurl: https://intro.quantecon.org/
+  baseurl: https://intro-cn.quantecon.org/
 
 bibtex_bibfiles:
   - _static/quant-econ.bib
