--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,10 +66,10 @@ jobs:
       # Build HTML (Website)
       # BUG: rm .doctress to remove `sphinx` rendering issues for ipywidget mimetypes
       # and clear the sphinx cache for building final HTML documents.
+      #    rm -r _build/.doctrees
       - name: Build HTML
         shell: bash -l {0}
         run: |
-          rm -r _build/.doctrees
           jb build lectures --path-output ./ -nW --keep-going
       - name: Upload Execution Reports (HTML)
         uses: actions/upload-artifact@v4
