--- a/lectures/_toc.yml
+++ b/lectures/_toc.yml
@@ -1,11 +1,11 @@
 format: jb-book
 root: intro
 parts:
-- caption: Introduction
+- caption: 导言
   numbered: true
   chapters:
   - file: about
-- caption: Economic Data 
+- caption: 经济数据
   numbered: true
   chapters:
   - file: long_run_growth
@@ -13,7 +13,7 @@ parts:
   - file: inflation_history
   - file: french_rev 
   - file: inequality
-- caption: Foundations
+- caption: 基础工具
   numbered: true
   chapters:
   - file: intro_supply_demand
