update broken links

--- a/lectures/_config.yml
+++ b/lectures/_config.yml
@@ -39,7 +39,8 @@ sphinx:
   config:
     bibtex_reference_style: author_year
     # false-positive links
-    linkcheck_ignore: ['https://doi.org/https://doi.org/10.2307/1235116', 'https://math.stackexchange.com/*', 'https://stackoverflow.com/*']
+    linkcheck_ignore: ['https://doi.org/https://doi.org/10.2307/1235116', 'https://unctad.org/publication/commodities-and-development-report-2019',
+    'https://math.stackexchange.com/*', 'https://stackoverflow.com/*']
     # myst-nb config
     nb_render_image_options:
       width: 80%
