--- a/lectures/_toc.yml
+++ b/lectures/_toc.yml
@@ -20,7 +20,7 @@ parts:
   - file: linear_equations
   - file: complex_and_trig
   - file: geom_series
-- caption: "Linear Dynamics: Finite Horizons"
+- caption: 线性动态：有限视界
   numbered: true
   chapters:
   - file: pv
@@ -28,12 +28,12 @@ parts:
   - file: equalizing_difference
   - file: cagan_ree
   - file: cagan_adaptive
-- caption: "Linear Dynamics: Infinite Horizons"
+- caption: 线性动态：无限视界
   numbered: true
   chapters:
   - file: eigen_I
   - file: greek_square 
-- caption: Probability and Distributions
+- caption:  概率与分布
   numbered: true
   chapters:
   - file: prob_dist
@@ -41,7 +41,7 @@ parts:
   - file: monte_carlo
   - file: heavy_tails
   - file: schelling
-- caption: Nonlinear Dynamics
+- caption: 非线性动态
   numbered: true
   chapters:
   - file: scalar_dynam
@@ -49,43 +49,43 @@ parts:
   - file: cobweb
   - file: olg
   - file: commod_price
-- caption: Monetary-Fiscal Policy Interactions
+- caption: 货币政策与财政政策的相互作用
   numbered: true
   chapters:
   - file: money_inflation
   - file: unpleasant
   - file: money_inflation_nonlinear
   - file: laffer_adaptive
-- caption: Stochastic Dynamics
+- caption: 随机动态
   numbered: true
   chapters:
   - file: ar1_processes
   - file: markov_chains_I
   - file: markov_chains_II
   - file: time_series_with_matrices
-- caption: Optimization
+- caption: 优化
   numbered: true
   chapters:
   - file: lp_intro
   - file: short_path
-- caption: Modeling in Higher Dimensions
+- caption: 高维建模
   numbered: true
   chapters:
   - file: eigen_II
   - file: input_output
   - file: lake_model
   - file: networks
-- caption: Markets and Competitive Equilibrium
+- caption: 市场与竞争性均衡
   numbered: true
   chapters:
   - file: supply_demand_multiple_goods
   - file: supply_demand_heterogeneity
-- caption: Estimation
+- caption: 估计
   numbered: true
   chapters:
   - file: simple_linear_regression
   - file: mle
-- caption: Other
+- caption: 其它
   numbered: true
   chapters:
   - file: troubleshooting
