--- a/lectures/_config.yml
+++ b/lectures/_config.yml
@@ -1,7 +1,7 @@
 title: Python数量经济学入门
-author: Thomas J. Sargent & John Stachurski
+author: 托马斯·萨金特（Thomas J. Sargent）和约翰·斯塔胡斯基（John Stachurski）
 logo: _static/qe-logo.png
-description: 本课程是由托马斯·萨金特（Thomas J. Sargent）和约翰·斯塔丘尔斯基（John Stachurski）设计和撰写的计算经济学入门讲座。
+description: 本课程是由托马斯·萨金特（Thomas J. Sargent）和约翰·斯塔胡斯基（John Stachurski）设计和撰写的计算经济学入门讲座。
 
 parse:
   myst_enable_extensions:  # default extensions to enable in the myst parser. See https://myst-parser.readthedocs.io/en/latest/using/syntax-optional.html
