--- a/lectures/_config.yml
+++ b/lectures/_config.yml
@@ -1,7 +1,7 @@
-title: A First Course in Quantitative Economics with Python
-author: Thomas J. Sargent & John Stachurski
+title: Python数量经济学入门
+author: 托马斯·萨金特（Thomas J. Sargent）和约翰·斯塔胡斯基（John Stachurski）
 logo: _static/qe-logo.png
-description: This website presents introductory lectures on computational economics, designed and written by Thomas J. Sargent and John Stachurski.
+description: 本课程是由托马斯·萨金特（Thomas J. Sargent）和约翰·斯塔胡斯基（John Stachurski）设计和撰写的计算经济学入门讲座。
 
 parse:
   myst_enable_extensions:  # default extensions to enable in the myst parser. See https://myst-parser.readthedocs.io/en/latest/using/syntax-optional.html
@@ -54,9 +54,9 @@ sphinx:
     html_static_path: ['_static']
     html_theme_options:
       authors:
-        - name: Thomas J. Sargent
+        - name: 托马斯·萨金特（Thomas J. Sargent）
           url: http://www.tomsargent.com/
-        - name: John Stachurski
+        - name: 约翰·斯塔胡斯基（John Stachurski）
           url: https://johnstachurski.net/ 
       dark_logo: quantecon-logo-transparent.png
       header_organisation_url: https://quantecon.org
@@ -66,7 +66,7 @@ sphinx:
       twitter: quantecon
       twitter_logo_url: https://assets.quantecon.org/img/qe-twitter-logo.png
       og_logo_url: https://assets.quantecon.org/img/qe-og-logo.png
-      description: This website presents introductory lectures on computational economics, designed and written by Thomas J. Sargent and John Stachurski.
+      description: 本课程是由托马斯·萨金特（Thomas J. Sargent）和约翰·斯塔胡斯基（John Stachurski）设计和撰写的计算经济学入门讲座。
       keywords: Python, QuantEcon, Quantitative Economics, Economics, Sloan, Alfred P. Sloan Foundation, Tom J. Sargent, John Stachurski
       analytics:
         google_analytics_id: G-QDS1YRJNGM
