--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -1,8 +1,8 @@
 name: Build Cache [using jupyter-book]
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    # Execute cache weekly at 3am on Monday
+    - cron:  '0 3 * * 1'
 jobs:
   tests:
     runs-on: ubuntu-latest
