--- a/.github/workflows/cache-windows.yml
+++ b/.github/workflows/cache-windows.yml
@@ -3,8 +3,10 @@ on:
   schedule:
     # Execute cache weekly at 3am on Monday
     - cron:  '0 3 * * 1'
+  workflow_dispatch:  # Allows manual trigger if required
+
 jobs:
-  tests:
+  cache:
     runs-on: windows-latest
     steps:
       - name: Checkout
