FIX: review linkchecker warnings

--- a/lectures/_config.yml
+++ b/lectures/_config.yml
@@ -127,3 +127,8 @@ sphinx:
           name: python3
         file_extension: ".py"
     tojupyter_images_markdown: true
+    nb_mime_priority_overrides: [
+       # Link Checker
+       ['linkcheck', 'text/plain', 10],
+       ['linkcheck', 'text/html', 20],
+     ]
