MAINT: review config

--- a/lectures/_config.yml
+++ b/lectures/_config.yml
@@ -25,7 +25,7 @@ execute:
     - '_static/*'
 
 html:
-  baseurl: https://intro-cn.quantecon.org/
+  baseurl: https://quantecon.github.io/lecture-intro.zh-cn
 
 bibtex_bibfiles:
   - _static/quant-econ.bib
@@ -63,15 +63,15 @@ sphinx:
       dark_logo: quantecon-logo-transparent.png
       header_organisation_url: https://quantecon.org
       header_organisation: QuantEcon
-      repository_url: https://github.com/QuantEcon/lecture-python-intro
-      nb_repository_url: https://github.com/QuantEcon/lecture-python-intro.notebooks
+      repository_url: https://github.com/QuantEcon/lecture-intro.zh-cn
+      nb_repository_url: https://github.com/QuantEcon/lecture-intro.zh-cn.notebooks
       twitter: quantecon
       twitter_logo_url: https://assets.quantecon.org/img/qe-twitter-logo.png
       og_logo_url: https://assets.quantecon.org/img/qe-og-logo.png
       description: 本课程是由托马斯·萨金特（Thomas J. Sargent）和约翰·斯塔胡斯基（John Stachurski）设计和撰写的计算经济学入门讲座。
       keywords: Python, QuantEcon, Quantitative Economics, Economics, Sloan, Alfred P. Sloan Foundation, Tom J. Sargent, John Stachurski
-      analytics:
-        google_analytics_id: G-QDS1YRJNGM
+      # analytics:
+      #   google_analytics_id: G-QDS1YRJNGM
       launch_buttons:
         notebook_interface        : classic  # The interface interactive links will activate ["classic", "jupyterlab"]
         binderhub_url             : https://mybinder.org  # The URL of the BinderHub (e.g., https://mybinder.org)
@@ -118,8 +118,8 @@ sphinx:
       ak2:   https://python.quantecon.org/ak2.html
     tojupyter_static_file_path: ["_static"]
     tojupyter_target_html: true
-    tojupyter_urlpath: "https://intro.quantecon.org/"
-    tojupyter_image_urlpath: "https://intro.quantecon.org/_static/"
+    tojupyter_urlpath: "https://quantecon.github.io/lecture-intro.zh-cn/"
+    tojupyter_image_urlpath: "https://quantecon.github.io/lecture-intro.zh-cn/_static/"
     tojupyter_lang_synonyms: ["ipython", "ipython3", "python"]
     tojupyter_kernels:
       python3:
