add github pages hosting locations

--- a/lectures/_config.yml
+++ b/lectures/_config.yml
@@ -65,7 +65,7 @@ sphinx:
       header_organisation: QuantEcon
       repository_url: https://github.com/QuantEcon/lecture-intro.zh-cn
       nb_repository_url: https://github.com/QuantEcon/lecture-intro.zh-cn.notebooks
-      download_nb_path: https://github.com/QuantEcon/lecture-intro.zh-cn
+      download_nb_path: https://quantecon.github.io/lecture-intro.zh-cn/
       twitter: quantecon
       twitter_logo_url: https://assets.quantecon.org/img/qe-twitter-logo.png
       og_logo_url: https://assets.quantecon.org/img/qe-og-logo.png
