--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,6 +77,11 @@ jobs:
         with:
           name: execution-reports
           path: _build/html/reports
+      - name: Upload Build Folder
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-assets
+          path: _build/
       - name: Preview Deploy to Netlify
         uses: nwtgck/actions-netlify@v3.0
         with:
