--- a/lectures/_config.yml
+++ b/lectures/_config.yml
@@ -1,4 +1,4 @@
-title: Python数量经济学入门
+title: Python量化经济学入门
 author: 托马斯·萨金特（Thomas J. Sargent）和约翰·斯塔胡斯基（John Stachurski）
 logo: _static/qe-logo.png
 description: 本课程是由托马斯·萨金特（Thomas J. Sargent）和约翰·斯塔胡斯基（John Stachurski）设计和撰写的计算经济学入门讲座。
